# attendance_system

./: .gitignore  HUONG_DAN_SU_DUNG.md  README.md  ai_models_list.txt  docker-compose.yml  hanche.txt  odoo.conf
custom_addons/: Dockerfile
custom_addons/attendance_system/: __manifest__.py
custom_addons/attendance_system/controllers/: __init__.py  attendance_controller.py  embedded_api_controller.py  mobile_api_controller.py  three_d_scan_controller.py
custom_addons/attendance_system/data/: leave_sequence.xml
custom_addons/attendance_system/models/: __init__.py  attendance.py  attendance_adjustment.py  attendance_config.py  attendance_dashboard.py  hr_employee_personal.py  leave_request.py  leave_request_reject_wizard.py  work_shift.py
custom_addons/attendance_system/security/: attendance_face_security.xml  attendance_security.xml  ir.model.access.csv
custom_addons/attendance_system/static/: __init__.py
custom_addons/attendance_system/tests/: __init__.py
custom_addons/attendance_system/views/: attendance_adjustment_views.xml  attendance_config_views.xml  attendance_dashboard_missing_views.xml  attendance_dashboard_views.xml  attendance_view.xml  employee_face_views.xml  hr_employee_personal_views.xml  hr_employee_views.xml  leave_request_views.xml  webcam_template.xml  work_shift_views.xml
custom_addons/face_attendance/: __manifest__.py
custom_addons/face_attendance/controllers/: __init__.py  face_login.py
custom_addons/face_attendance/grpc/: __init__.py  face_ai_client.py  face_recognition_pb2.py  face_recognition_pb2_grpc.py
custom_addons/face_attendance/models/: __init__.py  hr_attendance.py  hr_employee.py  res_company.py  res_config_settings.py  res_users.py
custom_addons/face_attendance/views/: hr_attendance_views.xml  hr_employee_views.xml  login_templates.xml  res_config_settings_views.xml
custom_api_services/: Dockerfile  Dockerfile.simple  README.md  main.py  requirements.txt  test_api.py  test_canny_system.py  test_enhanced_registration.py
custom_api_services/app/: config.py
custom_api_services/app/api/: routes.py
custom_api_services/app/core/: anti_spoofing_verifier.py  enrollment_pipeline.py  face_detection.py  face_embeddings.py  face_in_device_checker.py  file_operations.py  lbp_orb_features.py  skin_normalization.py  validation.py  yolov11_device_detection.py
custom_api_services/app/models/: face_models.py
custom_api_services/app/services/: face_recognition_service.py  registration_service.py
custom_api_services/controllers/: __init__.py  face_recognition_controller.py
custom_api_services/employee_canny_features/: employee_1_features.npy  employee_3_features.npy
custom_api_services/employee_embeddings/: employee_1_embedding_0.npy
custom_api_services/employee_faces/: employee_1_lbp_orb.npy
custom_api_services/models/: __init__.py  config.py  schemas.py
custom_api_services/services/: __init__.py  canny_features_service.py  embedding_service.py  face_alignment_service.py  face_comparison_service.py  face_detection_service.py  file_storage_service.py  image_processing_service.py  image_validation_service.py  skin_normalization_service.py
embedded_linux/: CMakeLists.txt  todo.txt
embedded_linux/config/: server_config.json
embedded_linux/include/: opencv_wrapper.hpp
embedded_linux/include/api/: api_client.hpp
embedded_linux/include/config/: config_manager.hpp
embedded_linux/include/ui/: app_state.hpp  attendance_app.hpp  base_screen.hpp  camera_screen.hpp  loading_screen.hpp  login_screen.hpp  menu_screen.hpp  message_screen.hpp  schedule_screen.hpp  ui_utils.hpp
embedded_linux/src/: main.cpp
embedded_linux/src/api/: api_client.cpp
embedded_linux/src/config/: config_manager.cpp
embedded_linux/src/ui/: attendance_app.cpp  base_screen.cpp  camera_screen.cpp  loading_screen.cpp  login_screen.cpp  menu_screen.cpp  message_screen.cpp  schedule_screen.cpp  ui_utils.cpp
embedded_linux/tools/: install_package.sh
face_3D_match_api/: ARCFACE_PIPELINE_GUIDE.md  CMakeLists.txt  Dockerfile  Simple_DFD_Diagram.md  entrypoint.sh
face_3D_match_api/employee_data/embeddings/employee_test123/: mean_embedding.csv
face_3D_match_api/src/: api_server.cpp  api_server.h  arcface_model.cpp  arcface_model.h  arcface_processor.cpp  arcface_processor.h  common.h  embeddings.cpp  embeddings.h  face_alignment.cpp  face_alignment.h  face_detector.cpp  face_detector.h  face_processing.cpp  face_processing.h  face_recognizer.cpp  face_recognizer.h  files.cpp  files.h  http_client.cpp  http_client.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h  video_processing.cpp  video_processing.h
face_3D_scan_frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
face_3D_scan_frontend/src/: App.css  App.tsx
face_3D_scan_frontend/src/components/: CameraRecorder.tsx  FaceRegistrationForm.tsx  FaceScanScreen.module.css  FaceScanScreen.tsx  LoadingScreen.module.css  LoadingScreen.tsx  MainMenu.module.css  MainMenu.tsx
face_3D_scan_frontend/src/hooks/: useQueryParams.ts
face_3D_scan_frontend/src/services/: api.ts
face_3D_scan_frontend/src/types/: index.ts
face_3d_scan/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
face_3d_scan/src/: App.vue  face-api.js  main.js  router.ts  style.css  styles.css
face_3d_scan/src/pages/: FaceRegistrationPage.vue  FaceVerificationPage.vue
face_3d_scan/src/services/: apiService.ts  faceMeshService.ts  index.ts  videoRecordingService.ts
face_ai_solver/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
face_ai_solver/app/grpc/: __init__.py  face_recognition.proto  server.py
face_ai_solver/app/inference/: __init__.py  face.py  media.py  models.py  service.py  spoofing.py  status.py  yolo_detector.py
face_verification_services/: requirements.txt
face_verification_services/app/core/: augmentation.py  canny_features.py  face_alignment.py  face_embeddings.py  file_operations.py  (+3 more)
mobile/attendance_app/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
(+75 files in other folders)
